# all_in_one

./: .gitattributes  .gitignore  README.md  prompts.json  pubspec.yaml  template.json
.github/workflows/: build-arm64-linux.yml  build-linux.yml  build.yml
android/app/: build.gradle
assets/: llm.json
assets/fonts/: .gitignore
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
langchain_lib/: analysis_options.yaml  pubspec.yaml
langchain_lib/lib/: langchain_lib.dart
langchain_lib/test/: .gitignore  langchain_lib_test.dart  test_example.dart  test_openai_client.dart  test_seq_chain.dart  test_seq_chain2.dart  test_vision.dart
lib/: main.dart
lib/app/: common.dart  float_notifier.dart  floating_area.dart  linux.dart  windows.dart
lib/common/: color_utils.dart  dev_utils.dart  toast_utils.dart
lib/enrty/: entry_screen.dart
lib/entry/: entry_screen.dart  future_builder.dart  routers.dart
lib/isar/: article.dart  article.g.dart  database.dart  llm_history.dart  llm_history.g.dart  llm_template.dart  llm_template.g.dart  recently_used.dart  recently_used.g.dart  schedule.dart  schedule.g.dart  software.dart  software.g.dart
lib/layout/: layout.dart  styles.dart
lib/llm/: ai_assistant_screen.dart  ai_client.dart
lib/llm/editor/: editor.dart  (+2 more)
lib/netstat_manager/: netstat_manager_screen.dart
lib/routers/: routers.dart
lib/schedule/: cron_listener.dart  extension.dart  schedule_screen.dart
lib/software_monitor/: readme.md  software_monitor_screen.dart
lib/software_watcher/: software_watcher_screen.dart
lib/styles/: app_style.dart
lib/system_monitor/: system_monitor_screen.dart
lib/time_converter/: extension.dart  time_converter_screen.dart
lib/tool_entry/: entry_screen.dart
lib/utils/: logger.dart
lib/workboard/: workboard_screen.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: .gitignore  Cargo.toml  prompts.json
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs
rust/src/api/: llm_api.rs  llm_plugin_api.rs  mod.rs  process_port_mapper_api.rs  simple.rs  software_monitor_api.rs  software_watcher_api.rs  sub_window_api.rs  system_monitor_api.rs
rust/src/api/software_watcher/: mod.rs  software.rs  watcher.rs
rust/src/errors/: mod.rs
rust/src/llm/: ai_helper.rs  app_flowy_model.rs  internal_prompts.rs  mod.rs  models.rs  sequential_chain_builder.rs  template.rs  tests.rs
rust/src/llm/plugins/: chat_file.rs  mind_map.rs  mod.rs
rust/src/llm/plugins/chat_db/: mod.rs  mysql.rs
rust/src/software_monitor/: foreground_monitor.rs  mod.rs  software.rs
rust/src/software_watcher/: foreground_watcher.rs  mod.rs  watcher.rs
rust/src/system_monitor/: mod.rs  tests.rs
rust/src/tests/: foreground_test.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_all_in_one.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_all_in_one.podspec
rust_builder/windows/: CMakeLists.txt
rust_simple_notify_lib/: Cargo.toml  build.rs
rust_simple_notify_lib/src/: lib.rs
rust_simple_notify_lib/src/ui/: listtile.slint  pin_window.slint
rust_simple_notify_lib/src/utils/: mod.rs
tests/: test_flatten_map.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
(+189 files in other folders)
