[package]
name = "rust_lib_all_in_one"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
cron-job = "=0.1.4"
dotenv = "0.15.0"
flutter_rust_bridge = "=2.0.0-dev.31"
langchain-rust = "4.0.3"
once_cell = "1.19.0"
rust_simple_notify_lib = { path = "../rust_simple_notify_lib" }
sysinfo = "0.30.8"
tokio = { version = "1.37.0", features = ["full"] }


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "libloaderapi",
    "processthreadsapi",
] }
systemicons = { git = "https://github.com/guchengxi1994/systemicons", branch = "master" }
winreg = "0.52.0"


