[package]
name = "rust_lib_all_in_one"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
async-openai = "0.21.0"
async-trait = "0.1.80"
cron-job = "=0.1.4"
flutter_rust_bridge = "=2.0.0-dev.31"
futures = "0.3.30"
infer = "0.15.0"
langchain-rust = "4.1.0"
once_cell = "1.19.0"
regex = "1.10.4"
reqwest = { version = "0.12", features = ["json","multipart"] }
rust_simple_notify_lib = { path = "../rust_simple_notify_lib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7", features = [ "runtime-tokio","mysql" ] }
sysinfo = "0.30.8"
tokio = { version = "1.37.0", features = ["full"] }

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "libloaderapi",
    "processthreadsapi",
] }
systemicons = { git = "https://github.com/guchengxi1994/systemicons", branch = "master" }
winreg = "0.52.0"

